--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="form-container">
+        <!-- Sign up -->
         <div class="signup-container slide-up">
             <h2 class="form-title">Sign Up</h2>
             <form accept="#">
@@ -20,6 +21,23 @@
                 <button class="submit-btn">Sign Up</button>
             </form>
         </div>
+        <!-- End Sign up -->
+
+        <!-- Login -->
+         <div class="login-container">
+            <div class="login-wrapper">
+                <h2 class="form-title">Log In</h2>
+                <form accept="#">
+                    <div class="form-holder">
+                        <input type="text" class="input" placeholder="Name">
+                        <input type="email" class="input" placeholder="Email">
+                        <input type="password" class="input" placeholder="Password">
+                    </div>
+                    <button class="submit-btn">Sign Up</button>
+                </form>
+                <a href="#" class="forgot-password">Forgot Password?</a>
+            </div>
+         </div>
     </div>
 </body>
 </html>
