--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="form-container">
         <!-- Sign up -->
-        <div class="signup-container slide-up">
-            <h2 class="form-title">Sign Up</h2>
+        <div class="signup-container">
+            <h2 class="form-title" id="signup">Sign Up</h2>
             <form accept="#">
                 <div class="form-holder">
                     <input type="text" class="input" placeholder="Name">
@@ -24,12 +24,11 @@
         <!-- End Sign up -->
 
         <!-- Login -->
-         <div class="login-container">
+         <div class="login-container slide-up">
             <div class="login-wrapper">
-                <h2 class="form-title">Log In</h2>
+                <h2 class="form-title" id="login">Log In</h2>
                 <form accept="#">
                     <div class="form-holder">
-                        <input type="text" class="input" placeholder="Name">
                         <input type="email" class="input" placeholder="Email">
                         <input type="password" class="input" placeholder="Password">
                     </div>
@@ -39,5 +38,6 @@
             </div>
          </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
